<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.basicapp.ui.MainViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_gravity="center"
            app:visibility="@{viewModel.isLoading}" />

        <androidx.recyclerview.widget.RecyclerView

            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@color/white"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="vertical"
            app:items="@{viewModel.items}"
            app:visibility="@{!viewModel.isLoading}" />
        <Button
            android:id="@+id/fetchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.fetchItems()}"
            android:text="@string/fetch_items" />

        <EditText
            android:id="@+id/firstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_first_name"
            android:inputType="text"
            android:text="@={viewModel.firstName}" />

        <EditText
            android:id="@+id/lastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_last_name"
            android:inputType="text"
            android:text="@={viewModel.lastName}" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.saveUser()}"
            android:text="@string/save_user" />

        <TextView
            android:id="@+id/loadedUserText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:text="@{viewModel.savedUser}" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.deleteUser(0)}"
            android:text="@string/delete_user" />

    </LinearLayout>
</layout>